--- a/Source/Blazorise.Tailwind/wwwroot/blazorise.tailwind.prod.css
+++ b/Source/Blazorise.Tailwind/wwwroot/blazorise.tailwind.prod.css
@@ -4596,10 +4596,6 @@ td:focus {
   }
 }
 
-.b-toast {
-  display: none;
-}
-
 .b-toast.b-toast-fade.flex {
   animation: toast-slidein var(--toast-animation-duration, 300ms) linear;
 }
